--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -79,3 +79,21 @@ select {
     scroll-behavior: auto !important;
   }
 }
+
+a {
+    /* Убрать стандартное подчеркивание */
+    text-decoration: none;
+    
+    /* Убрать цветовые изменения */
+    color: inherit; /* наследует цвет от родителя */
+    
+    /* Убрать outline при фокусе (замените на свой стиль!) */
+    outline: none;
+    
+    /* Убрать все состояния */
+    &:visited, &:hover, &:active, &:focus {
+        /* color: inherit; */
+        text-decoration: none;
+        background-color: transparent;
+    }
+}
