--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,7 @@
 :root {
   --font-primary: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
   --font-secondary: 'Montserrat', 'Arial', sans-serif;
+  --font-third: 'Poppins', 'Arial', sans-serif;
   
   --font-weight-regular: 400;
   --font-weight-medium: 500;
@@ -124,3 +125,71 @@ body {
   height: 70px;
   margin: 38px auto 40px auto;
   }
+
+
+
+.section_motherhood{
+    background-color: #F0EFEE;
+    height: 761px;
+}
+
+
+  .motherhood{
+    height: 100%;
+    padding: 80px 0 80px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    z-index: 1;
+  }
+.motherhood_text{
+  width: 513px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 24px;
+  z-index: 1;
+  
+}
+.motherhood_title{
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight-semibold);
+  font-size: 32px;
+}
+
+.motherhood_discription{
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight-regular);
+  font-size: 16px;
+  line-height: 160%;
+}
+
+.motherhood_btn{
+   font-family: var(--font-third);
+  font-weight: var(--font-weight-semibold);
+  font-size: 16px;
+  color:#353535;
+    text-decoration: underline 1px solid #353535;
+    text-underline-offset: 9px;
+
+}
+.motherhood_bg{
+  display: contents;
+
+}
+
+.motherhood_bgtext{
+   position: absolute;
+    top: 65%; 
+    left: 0;
+    z-index: 0; 
+}
+.motherhood_image{
+  width:463px;
+  height:605px;
+  z-index: 1;
+}
+.motherhood_img{
+  border-radius: 10px;
+}
