--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -277,8 +277,6 @@ body {
 }
 
 .btn{
-  width: 193px;
-  height: 56px;
   font-family: var(--font-third);
   font-weight: var(--font-weight-semibold);
   font-size: 16px;
@@ -289,7 +287,6 @@ body {
    display: inline-flex;
   align-items: center;
   justify-content: center;
-   /* Отключаем все изменения при взаимодействии */
   &:hover, &:active, &:focus {
     color: #ffffff;
     background-color: #7F3E41;
@@ -300,9 +297,98 @@ body {
   }
 } 
 
-/* .btn::after {
-  display: none;
-} */
-
 .products_btn{
+  width: 193px;
+  height: 56px;
+}
+
+.section_tips{
+  height: 923px;
+  background-color: #7F3E41;
+  position: relative;
+}
+
+.tips{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 40px;
+  width: 100%;
+  padding: 80px 0;
+}
+
+.tips_cards{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 23px;
+}
+.tips_bgimage{
+  position: absolute;
+  top: 0%; 
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    left: 0;
+    z-index: 0; 
+  }
+  
+  .tips_title{
+    color: #fff;
+    align-self: start;
+
+}
+.card{
+  width:360px;
+  height: 282px;
+  background-color: #fff;
+  border-radius: 16px;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 16px;
+  position: relative;
+}
+.card_logo{
+  width: 70px;
+  height: 70px;
+}
+.card_title{
+position: relative;
+}
+
+.card_name{
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight-bold);
+  font-size: 16px;
+  line-height: 1.2;
+  
+}
+
+.card_arrow{
+  position: absolute;
+  top: 3px;
+  height: 11px;
+  width: auto;
+  left: 260px;
+  z-index: 1; 
+}
+
+.card_discription{
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight-regular);
+  font-size: 16px;
+  line-height: 1.4;
+  
+}
+.tips_btn{
+  color: #7F3E41;
+  background-color:  #ffffff;
+  width: 103px;
+  height: 56px;
+  &:hover, &:active, &:focus {
+    color: #7F3E41;
+    background-color: #ffffff;
+  }
 }
