--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -467,3 +467,181 @@ gap: 24px;
 .readMore{
   color: #7F3E41;
 }
+
+
+.section_contacts{
+  height:1294px;
+  background-color: #7F3E41;
+
+}
+.contacts_container{
+  display: flex;
+  padding: 80px 0px;
+  flex-direction: column;
+  gap: 80px;
+}
+.contacts_title{
+   color: #fff;
+    align-self: start;
+    font-size: 32px;
+    vertical-align: top;
+}
+.communication_wrapper{
+  padding-top: 40px;
+  display: flex;
+
+}
+.message{
+  height: 434px ;
+  width: 645px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  justify-content: space-between;
+  padding-right: 40px;
+}
+.message_title{
+  font-size: 24px;
+  font-weight: var(--font-weight-semibold);
+  color:#fff;
+  line-height: 1;
+}
+
+.message_title-current{
+  padding-bottom: 16px;
+
+}
+.form_group{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 32px;
+ 
+}
+.input_group{
+  position: relative;
+  width: 286px;
+  /* height: 35px; */
+}
+.message_text{
+  font-size: 16px;
+  font-weight: var(--font-weight-regular);
+  color: #fff;
+  line-height: 1.3;
+}
+.message_text-bold{
+  font-weight: var(--font-weight-bold);
+}
+.underline{
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+}
+.underline-big{
+  bottom: -80px;
+  left: 0;
+  width: 605px;
+}
+
+.button_wrapper{
+  padding-top: 40px;
+  align-self: end;
+}
+
+.message_btn{
+  width:193px;
+  height:56px;
+}
+
+.vertical_line{
+  width: 1px;
+  height: 434px;
+  background-color: #C3C3C3;
+}
+
+.callUs{
+padding-left: 40px;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+gap: 40px;
+}
+
+.text_field{
+  width: 442px;
+  height: 118px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.map{
+  height: 541px;
+  width: 100%;
+  font-size: 32px;
+  font-weight: var(--font-weight-semibold);
+}
+.section_footer{
+  height: 306px;
+  background-color: #7F3E41;
+}
+.footer{
+  display: flex;
+  padding-top: 56px;
+}
+
+.columns{
+margin-left: 44px;
+display:flex ;
+justify-content: space-between;
+gap: 150px;
+}
+.column_first{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 24px;
+  width: 281px;
+}
+.column_second{
+width: 217px;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+gap: 16px;
+}
+
+.column_wrapper{
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.footer_text{
+  font-size: 14px;
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight-semibold);
+  line-height: 160%;
+  color: #fff;
+}
+.footer_text-bold{
+   font-size: 14px;
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight-regular);
+  line-height: 160%;
+  color: #fff;
+}
+.column_third{
+ width: 96px;
+
+}
+.footer_icon{
+  width: 24px;
+  height: 24px;
+}
+.footer_icons{
+padding-top: 16px;
+ display: flex;
+ gap: 12px;
+}
